--- a/HTTP완벽가이드/4장_커넥션.md
+++ b/HTTP완벽가이드/4장_커넥션.md
@@ -32,7 +32,7 @@
 
 - `TCP 세그먼트`
 
-![tcp_segment](C:\Users\multicampus\Desktop\tcp_segment.png)
+<img src="C:\Users\multicampus\Desktop\tcp_segment.png" alt="tcp_segment"  />
 
 - TCP 커넥션 유지하기
   - 컴퓨터는 항상 여러개의 TCP 커넥션을 가지고 있다. 
@@ -124,7 +124,7 @@
 `HTTP 커넥션 성능 향상을 위한 기술`
 
 1. 병렬(parallel) 커넥션
-   - 여러 개의 TCP 커넥션을 통한 통시 HTTP 요청
+   - 여러 개의 TCP 커넥션을 통한 동시 HTTP 요청
 2. 지속(persistance) 커넥션
    - 커넥션을 맺고 끊는 데서 발생하는 지연을 제거하기 위한 TCP의 커넥션 재활용
 3. 파이프라인(pipelined) 커넥션
@@ -149,7 +149,7 @@
 
 - 병렬 커넥션은 더 빠르게 "느껴질 수" 있다.
 
-  - 이 말은 굉장히 충격적인데,  실제로 여러개의 병렬처리가 되는 모습을 보며 사람들은 더 빠른 속도라도 느낀다. 
+  - 이 말은 굉장히 충격적인데,  실제로 여러개의 병렬처리가 되는 모습을 보며 사람들은 더 빠른 속도라고 느낀다.
 
 
 
