--- a/Effective_Java/1.2.Builder.md
+++ b/Effective_Java/1.2.Builder.md
@@ -80,7 +80,7 @@ NutritionFacts cocaCola = new NutritionFacts.Builder(240, 8)
 
 ## 계층적으로 설계된 클래스
 
-[구현소스]: https://github.com/SangjinH/TIL/tree/master/Effective_Java/effectivejava/src/main/java/Builder	"구현소스파일위치"
+https://github.com/SangjinH/TIL/tree/master/Effective_Java/effectivejava/src/main/java/Builder 소스코드
 
 ---
 
